# guzzle-ext

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.m4  config.w32  guzzle.c  guzzle.php  php_guzzle.h
src/: client.c  client.h  common.h  handler_stack.c  handler_stack.h  middleware.c  middleware.h
src/cookie/: cookie_jar.c  cookie_jar.h  cookie_jar_interface.c  cookie_jar_interface.h  set_cookie.c  set_cookie.h
src/psr/http_message/: message_interface.c  message_interface.h  request_interface.c  request_interface.h  response_interface.c  response_interface.h  server_request_interface.c  server_request_interface.h  stream_interface.c  stream_interface.h  uploaded_file_interface.c  uploaded_file_interface.h  uri_interface.c  uri_interface.h
tests/: 001.phpt
